# Standard-AI-Framework

./: .env.example  .gitignore  ACTION_ITEMS.md  FRAMEWORK_REVIEW.md  README.md  REVIEW_SUMMARY.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.claude/: CONTEXT.md
docs/architecture/: engineering-review.md  folder-structure.md  overview.md
docs/guides/: getting-started.md  logging.md
infra/docker/: docker-compose.yml  init-db.sql  n8n-local.yml
infra/monitoring/: prometheus.yml
infra/monitoring/grafana/provisioning/datasources/: prometheus.yml
integrations/google/: package.json
integrations/google/src/: index.ts  sheets.ts
integrations/n8n/: package.json
integrations/n8n/src/: index.ts
lookups/business/: customer-tiers.md
prompts/agents/: data-analyst.md
prompts/system/: base-assistant.md
prompts/tools/: google-sheets.md
scripts/: create-service.js
skills/data/: price-checker.md
templates/service-agent/: Dockerfile  package.json
templates/service-agent/src/: index.ts
templates/service-agent/src/agents/: index.ts
templates/service-agent/src/routes/: agents.ts  chat.ts
templates/service-api/: Dockerfile  package.json
templates/service-api/src/: index.ts
templates/service-api/src/routes/: auth.ts  health.ts
templates/service-python/: Dockerfile  pyproject.toml
templates/service-python/src/: __init__.py  config.py  main.py  middleware.py
templates/service-python/src/agents/: __init__.py
templates/service-python/src/api/: __init__.py  agents.py  chat.py  health.py
templates/service-python/src/models/: __init__.py
templates/service-python/src/tools/: __init__.py
templates/service-python/tests/: test_api.py
templates/service-web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
templates/service-web/src/app/: globals.css  layout.tsx  page.tsx
templates/service-web/src/components/: chat.tsx  providers.tsx
templates/service-web/src/lib/: utils.ts
tests/: setup.ts
tests/fixtures/: index.ts
tests/integration/: api.test.ts
tests/mocks/: index.ts
tests/unit/: agent.test.ts
